--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
     <div class="mid search">
 
         <div>
-          <input type="search" id="searchInp" placeholder="Search..." />
+          <input type="search" id="searchInput" placeholder="Search..." />
           <button id="searchBtn"><i class="fa fa-search"></i></button>
         </div>
 
         <button>small search</button>
+        <button id="AiBtn">Use AI</button>
 
       <div class="AI">
-        <button>Use AI</button>
+        
       </div>
     </div>
 
