--- a/pages/gym/index.html
+++ b/pages/gym/index.html
@@ -2,101 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Workout Tracker 💪</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="../../wallpaper/gym-near.png">
+  <script src="fileHandling.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <div class="container">
+  <header>
+    <a href="#Workout">Workouts</a>
+    <a href="#stretching">Stretches</a>
+    <a href="#weightSection">Charts</a>
+  </header>
 
-    <!-- Today's Workout -->
-    <div class="today-box">
-      <h2><i class="fa-solid fa-calendar-day"></i> Today's Workout: <span id="todayWorkout">Loading...</span></h2>
+  <main>
+    <h1>🏋️‍♂️ Workout Tracker</h1>
+    <h2 id="todayWorkout">Today's Workout</h2>
+
+    <div class="btns">
+      <button id="Workouts">Workouts</button>
+      <button id="Stretches">Stretches</button>
     </div>
 
-    <!-- Upper A (Sunday) -->
-    <div class="workout-day">
-      <div class="day-title">Sunday 🟥 - Upper A</div>
+    <div id="todayWorkouts"></div>
+    
+  </main>
+  
+  <p id="lastUpdate">Last updated: --</p>
 
-      <div class="exercise"><span class="exercise-name">Bench Press</span><span class="sets-reps">4 × 8</span><input type="number" id="benchPressWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/gRVjAtPip0Y" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Machine Fly</span><span class="sets-reps">4 × 8</span><input type="number" id="machineFlyWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/eozdVDA78K0" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Machine Dips</span><span class="sets-reps">4 × 8</span><input type="number" id="machineDipsWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/2z8JmcrW-As" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">T-Bar Row</span><span class="sets-reps">4 × 8</span><input type="number" id="tbarRowWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/5jWfOFzPMeY" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Pull-ups</span><span class="sets-reps">3 × 8</span><input type="number" id="pullupsWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/eGo4IYlbE5g" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Lat Pulldown</span><span class="sets-reps">3 × 8</span><input type="number" id="latPulldownWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/CAwf7n6Luuc" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Overhead Press</span><span class="sets-reps">4 × 8</span><input type="number" id="overheadPressWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/qEwKCR5JCog" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Lateral Raises</span><span class="sets-reps">4 × 10</span><input type="number" id="lateralRaisesWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/3VcKaXpzqRo" target="_blank" class="btn">🎥</a></div>
-    </div>
+  <article>
 
-    <!-- Lower A (Monday) -->
-    <div class="workout-day">
-      <div class="day-title">Monday 🟧 - Lower A</div>
+    <section id="Workout">
+      <h2>🏋️‍♀️ Workout List</h2>
+      <button onclick="saveProgress()">💾 Save Progress</button>
+      <div id="exerciseList"></div>
 
-      <div class="exercise"><span class="exercise-name">Leg Extension</span><span class="sets-reps">4 × 10</span><input type="number" id="legExtensionWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/YyvSfVjQeL0" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Seated Hamstring Curl</span><span class="sets-reps">4 × 10</span><input type="number" id="seatedHamstringWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/1Tq3QdYUuHs" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Hip Abduction</span><span class="sets-reps">3 × 12</span><input type="number" id="hipAbductionWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/IwZ6QZdB4fY" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Hip Adduction</span><span class="sets-reps">3 × 12</span><input type="number" id="hipAdductionWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/xQNrFHEMhI4" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Seated Calf Raises</span><span class="sets-reps">4 × 15</span><input type="number" id="seatedCalfWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/-M4-G8p8fmc" target="_blank" class="btn">🎥</a></div>
-    </div>
+    </section>
 
-    <!-- Tuesday - Rest -->
-    <div class="workout-day">
-      <div class="day-title">Tuesday 💧 - Rest</div>
-      <p style="text-align:center;">Active recovery: walk, bike, or stretch 🧘‍♂️</p>
-    </div>
+    <hr>
 
-    <!-- Upper B (Wednesday) -->
-    <div class="workout-day">
-      <div class="day-title">Wednesday 🟦 - Upper B</div>
-
-      <div class="exercise"><span class="exercise-name">Incline Machine Press</span><span class="sets-reps">4 × 8</span><input type="number" id="inclinePressWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/4Y2ZdHCOXok" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Cable Fly</span><span class="sets-reps">4 × 8</span><input type="number" id="cableFlyWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/WEMRzGktYFc" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Chest Dips</span><span class="sets-reps">3 × 10</span><input type="number" id="chestDipsWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/2z8JmcrW-As" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Dumbbell Row</span><span class="sets-reps">4 × 10</span><input type="number" id="dumbbellRowWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/pYcpY20QaE8" target="_blank" class="btn">🎥</a></div>
-    </div>
-
-    <!-- Lower B (Thursday) -->
-    <div class="workout-day">
-      <div class="day-title">Thursday 🟨 - Lower B</div>
-
-      <div class="exercise"><span class="exercise-name">Lying Hamstring Curl</span><span class="sets-reps">4 × 10</span><input type="number" id="lyingHamstringWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/1Tq3QdYUuHs" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Leg Extension</span><span class="sets-reps">3 × 12</span><input type="number" id="legExtensionBWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/YyvSfVjQeL0" target="_blank" class="btn">🎥</a></div>
-      <div class="exercise"><span class="exercise-name">Glute Kickbacks</span><span class="sets-reps">3 × 10</span><input type="number" id="gluteKickbacksWeight" class="weight-input" placeholder="kg"><a href="https://youtu.be/veF2xGnbkMM" target="_blank" class="btn">🎥</a></div>
-    </div>
-
-    <!-- Friday - Rest -->
-    <div class="workout-day">
-      <div class="day-title">Friday 🌿 - Rest</div>
-      <p style="text-align:center;">Total rest. Enjoy your day! 💤</p>
-    </div>
-
-    <!-- Saturday - Rest -->
-    <div class="workout-day">
-      <div class="day-title">Saturday 🌿 - Rest</div>
-      <p style="text-align:center;">Recovery & stretching 🧘</p>
-    </div>
-
-    <!-- Progress Tracker -->
-    <div class="workout-day">
-      <div class="day-title">📈 Progress Tracker</div>
-
-      <label>🏋️ Body Weight (kg):</label>
-      <input type="number" id="bodyWeight" class="input" placeholder="e.g. 75" />
-
-      <button onclick="saveProgress()" class="btn">💾 Save Progress</button>
-      <button onclick="exportProgress()" class="btn">📤 Export</button>
-      <label class="btn" style="display:inline-block; cursor:pointer;">
-        📥 Import
-        <input type="file" onchange="importProgress(event)" style="display:none" />
-      </label>
-
-      <p id="lastUpdate" style="margin-top: 10px; font-style: italic; color: gray;"></p>
-
+    <section id="weightSection">
+      <h3>📊 Body Weight Log</h3>
+      <input type="number" id="bodyWeight" placeholder="Enter body weight (kg)" />
+      <button onclick="saveProgress()">💾 Save Progress</button>
       <canvas id="progressChart"></canvas>
-    </div>
-  </div>
+    </section>
+
+    <hr>
+
+    <section id="stretching">
+      <h2>🔵 Static Stretching (General After Workout)</h2>
+      <ul>
+        <li>Child’s Pose – 30 sec</li>
+        <li>Cobra Stretch – 30 sec</li>
+      </ul>
+
+      <hr>
+
+      <h3>🔺 Upper Body Stretching</h3>
+      <ul>
+        <li>Chest Stretch (wall/doorway) – 20–30 sec</li>
+        <li>Shoulder Stretch (across body) – 20 sec each arm</li>
+        <li>Triceps Stretch (overhead) – 20 sec each arm</li>
+      </ul>
+
+      <hr>
+      
+      <h3>🔻 Lower Body Stretching</h3>
+      <ul>
+        <li>Standing Quad Stretch – 20 sec each leg</li>
+        <li>Hamstring Stretch – 20–30 sec each leg</li>
+        <li>Calf Stretch on Wall – 20 sec each leg</li>
+        <li>Hip Flexor Stretch (lunge position) – 20–30 sec each leg</li>
+      </ul>
+    </section>
+
+
+    <section id="dataControls">
+      <button onclick="exportProgress()">⬇️ Export</button>
+      <button onclick="clearAllProgress()">⬇️ clear</button>
+      <label class="import-btn">
+        ⬆️ Import
+        <input type="file" accept=".json" onchange="importProgress(event)" hidden>
+      </label>
+    </section>
+  </article>
 
   <script src="script.js"></script>
 </body>
